fix weird link overlapping problem

--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -760,11 +760,11 @@ footer p, footer a, footer li {
   margin-bottom: .66em;
 }
 
-.student-links li { margin-bottom: 5px; }
+.student-links li { margin-bottom: 8px; }
+
 .student-links li a {
   color: #000;
   padding: 0;
-  padding-top: 16px;
   border-bottom: 2px solid #bebebe;
   letter-spacing: 0;
   background-color: transparent;
